# scg-detection-tools

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.ipynb
notebooks/: test.ipynb
src/scg_detection_tools/: __main__.py  dataset.py  detect.py  filters.py  generate.py  models.py  preprocess.py  segment.py
src/scg_detection_tools/annotations_viewer/: gui.py
src/scg_detection_tools/extra/annotations_viewer/: gui.py
src/scg_detection_tools/extra/autotrain/: autotrain.py  autotrain_cfg.yaml
src/scg_detection_tools/utils/: cvt.py  file_handling.py  image_tools.py  yolonas_train.py
