[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "scg-detection-tools"
version = "0.0.1"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "opencv-python",

    "torch",
    "torchvision",
    "torchaudio",

    "ultralytics",
    "roboflow==1.1.33",
    "supervision",
    "super-gradients"
]
requires-python = ">= 3.8"
description = "Tools to help with object detection tasks and support different models, such as YOLOv8, YOLO-NAS, Roboflow..."
